# penandpaper

./: .gitignore  .gitmodules  README.md  bundle.sh  elm.json  makeappimage.sh
.github/workflows/: build_client.yml  build_server.yml
cert/: certificate.csr  certificate.pem  dh1024.pem  dh512.pem  key.pem
client/: .eslintrc  package-lock.json  package.json  tsconfig.json
client/elm/: elm.json  index.html
client/elm/page/: index.html  util.js
client/elm/src/: Main.elm
client/module_typings/: tiny-sdf.d.ts
client/node_module_patches/dock-spawn-ts/lib/js/: DraggableContainer.d.ts
client/public/: index.html
client/public/res/: font.json
client/src/: App.vue  main.ts
client/src/audio/: AudioServer.ts
client/src/components/: Account.vue  Autocomplete.vue  Chat.vue  CriticalError.vue  ListView.vue  Login.vue  Menu.vue  Notification.vue  PlayerList.vue  QuickEntryCreator.vue  Toolbar.vue  TreeView.vue  UserManager.vue  Wiki.vue  WikiContentView.vue  WikiSearch.vue  WorldMap.vue  buildingserver.ts  server.ts
client/src/rendering/: actor.ts  camera.ts  dooractor.ts  fontactor.ts  fontloader.ts  fontmaterial.ts  grid_material.ts  gridactor.ts  lineactor.ts  material.ts  ping_actor.ts  roomactor.ts  shader_cache.ts  tileactor.ts  tilerenderer.ts  token_actor.ts  wallactor.ts
client/src/simulation/: building.ts  ping_manager.ts  simulation.ts
client/src/store/: index.ts
client/src/tools/: tool.ts  tool_distance.ts  tool_door.ts  tool_line.ts  tool_ping.ts  tool_room.ts
client/vue/penandpaper/: .eslintrc  README.md  find_missing_cpr.sh  package-lock.json  package.json
client/vue/penandpaper/node_module_patches/dock-spawn-ts/lib/js/: ResizableContainer.d.ts
client/vue/penandpaper/public/: font.json
client/vue/penandpaper/src/: App.vue  eventbus.ts  global.ts  main.ts  simulation.ts
client/vue/penandpaper/src/components/: Attributes.vue  Autocomplete.vue  Chat.vue  CriticalError.vue  Login.vue  Map.vue  Menu.vue  PlayerList.vue  QuickEntryCreator.vue  Toolbar.vue  TreeView.vue  Wiki.vue  WikiContentView.vue  WikiTypes.ts  buildingserver.ts  packetdispatcher.ts  renderlayers.ts  server.ts
client/vue/penandpaper/src/lib/: FileSaver.min.js
client/vue/penandpaper/src/rendering/: actor.ts  camera.ts  diffuse_material.ts  dooractor.ts  fontactor.ts  fontloader.ts  fontmaterial.ts  furnitureactor.ts  grid_material.ts  gridactor.ts  material.ts  matrix.ts  renderer.ts  roomactor.ts  shader_cache.ts  textured_material.ts  tilerenderer.ts  token_actor.ts  wallactor.ts
client/vue/penandpaper/src/simulation/: building.ts  simulation.ts
client/vue/penandpaper/src/store/: index.ts
client/vue/penandpaper/src/tools/: tool.ts  tool_door.ts  tool_furniture.ts  tool_line.ts  tool_reveal.ts  tool_room.ts  tool_token.ts  tool_wall.ts
elm-stuff/0.19.0/: Main.elmi  Main.elmo
page/: .index.html.swp  .util.js.swp  index.html  main.css  main.js  server.py  util.js
server/: CMakeLists.txt  cert  html  package.yaml
server/app/: Main.hs
server/cpp/: .gitignore
server/cpp/depend/: .gitignore
server/cpp/src/: Authenticator.cpp  Authenticator.h  CMakeLists.txt  Database.cpp  Database.h  Doodad.cpp  Doodad.h  HttpServer.cpp  HttpServer.h  IdGenerator.cpp  IdGenerator.h  Logger.h  LuaScript.cpp  LuaScript.h  Markdown.cpp  Markdown.h  MarkdownNode.cpp  Os.cpp  Os.h  Packet.cpp  Packet.h  Permissions.h  Player.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  QGramIndex.cpp  QGramIndex.h  Random.cpp  Random.h  Serializeable.h  Simulation.cpp  Simulation.h  Token.cpp  Token.h  Util.cpp  Util.h  WebSocketServer.cpp  WebSocketServer.h  (+4 more)
server/cpp/src/atlas/: Atlas.h  BiomeMap.cpp  BiomeMap.h  CMakeLists.txt  Image.cpp  Image.h  Point.h  Triangle.h  atlas_debug_main.cpp
server/cpp/src/atlas/core/: Map.cpp  Map.h  Material.h  OpenSimplexNoise.cpp  OpenSimplexNoise.h
server/cpp/src/atlas/gui/: Conversions.cpp  MainWindow.cpp  MainWindow.h  MapWidget.h
server/cpp/src/atlas/rendering/: BiomeMap.h  Image.cpp  Image.h  TileRenderer.cpp  TileRenderer.h
server/cpp/src/building/: Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  Door.cpp  Door.h  Furniture.cpp  Furniture.h  Room.cpp  Room.h  Visible.h  Wall.cpp  Wall.h
server/cpp/src/fontrenderer/: CMakeLists.txt
server/cpp/src/geometry/: CMakeLists.txt  Vector.h
server/depend/uWebSockets/: CMakeLists.txt
server/haskell/app/: Main.hs
server/haskell/src/: Websocket.hs
server/src/: Authenticator.cpp  BTree.h  CMakeLists.txt  CharacterManager.cpp  CharacterManager.h  Database.cpp  Database.h  Doodad.cpp  File.cpp  HttpServer.cpp  HttpServer.h  IdGenerator.cpp  Logger.h  LuaScript.cpp  LuaScript.h  Markdown.cpp  Markdown.h  MarkdownNode.cpp  MarkdownNode.h  Packet.cpp  Packet.h  Permissions.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  QGramIndex.cpp  Random.cpp  Random.h  Serializeable.h  Simulation.cpp  Simulation.h  Simulation.hs  Token.cpp  Token.h  UserManager.cpp  UserManager.h  Util.cpp  Util.h  WebSocketServer.cpp  (+8 more)
server/src/atlas/: CMakeLists.txt
server/src/atlas/core/: EventBus.cpp  EventBus.h  GridIndex.h  Image.cpp  Image.h  Map.cpp  Map.h  ObjectDistribution.cpp  ObjectDistribution.h  ObjectIndex.cpp  ObjectIndex.h  OpenSimplexNoise.h  Semaphore.h  TileMapCreatorMain.cpp
server/src/atlas/gui/: BrushPanel.cpp  BrushPanel.h  Camera.cpp  Camera.h  Conversions.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  ObjectPanel.cpp  ObjectPanel.h  main.cpp
server/src/atlas/rendering/: BiomeMap.cpp  TileRenderer.cpp  TileRenderer.h
server/src/building/: Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  Door.h  Furniture.cpp  Furniture.h  Room.h
server/src/fontrenderer/: CMakeLists.txt  FontRenderer.cpp
server/src/geometry/: Vector.cpp
server/src/utils/: File.cpp  File.h
src/: Main.elm
